# openvpn_tg_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: gitignore_modify_plan.md
src/ovpn_bot/: __init__.py  __main__.py  config.py  docker_logic.py  telegram_bot.py
tests/: test_parse_address.py  test_profile_protocol.py
